CRUD boat without filters on getAll
